--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
         <item>Sold</item>
         <item>Paused</item>
     </string-array>
+    <string name="category">Category</string>
+    <string name="condition">Condition</string>
+    <string name="sort_by">Sort By</string>
 </resources>
